--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="flex items-center space-x-[20px]">
         <!-- Main nav -->
         <nav class="hidden md:flex gap-[40px] font-accent text-white" role="navigation" aria-label="Main navigation">
-          <a href="/" class="hover:underline">Shop</a>
-          <a href="/" class="hover:underline">Collections</a>
-          <a href="/" class="hover:underline">Explore</a>
+          <a href="#" class="hover:underline">Shop</a>
+          <a href="#" class="hover:underline">Collections</a>
+          <a href="#" class="hover:underline">Explore</a>
         </nav>
         <!-- Hamburger -->
         <button id="menuToggle" class="text-white md:hidden" aria-label="Open main menu">
@@ -33,7 +33,7 @@
           </svg>
         </button>
         <!-- Logo -->
-        <a href="/" class="md:hidden" aria-label="Go to homepage">
+        <a href="#" class="md:hidden" aria-label="Go to homepage">
           <img src="./images/logo.svg" alt="ELY SHIVA logo" width="125">
         </a>
       </div>
@@ -41,8 +41,8 @@
       <!-- Right: Icons -->
       <div class="flex items-center space-x-4 font-accent text-white">
         <nav class="hidden md:flex space-x-[37px] mr-[37px]" role="navigation" aria-label="Search and account navigation">
-          <a href="/" class="hover:underline">Search</a>
-          <a href="/" class="hover:underline">Account</a>
+          <a href="#" class="hover:underline">Search</a>
+          <a href="#" class="hover:underline">Account</a>
         </nav>
         <button aria-label="Bookmarks">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="22" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" shape-rendering="geometricPrecision">
@@ -70,7 +70,7 @@
             <path d="M17 1L1 17" stroke="black"/>
           </svg>
         </button>
-        <a href="/" aria-label="Go to homepage">
+        <a href="#" aria-label="Go to homepage">
           <img src="./images/logo-black.svg" alt="ELY SHIVA logo" width="125">
         </a>
       </div>
@@ -91,11 +91,11 @@
     </div>
     <!-- Mobile nav -->
     <nav class="flex justify-between font-accent" role="navigation" aria-label="Mobile menu">
-      <a href="/">Shop</a>
-      <a href="/">Collections</a>
-      <a href="/">Explore</a>
-      <a href="/">Search</a>
-      <a href="/">Account</a>
+      <a href="#">Shop</a>
+      <a href="#">Collections</a>
+      <a href="#">Explore</a>
+      <a href="#">Search</a>
+      <a href="#">Account</a>
     </nav>
   </div>
   
@@ -107,27 +107,27 @@
         <img src="./images/hero.jpg" alt="Spring Collection" class="absolute inset-0 w-full h-full object-cover object-top">
       </picture>
       <h1 class="mb-[20px] md:mb-[38px]">
-        <a href="/" aria-label="ELY SHIVA homepage">
+        <a href="#" aria-label="ELY SHIVA homepage">
           <span class="sr-only">ELY SHIVA homepage</span>
           <img src="./images/logo.svg" alt="ELY SHIVA logo" class="w-[222px] lg:w-[597px]">
         </a>
       </h1>
       <div class="md:flex flex-wrap md:gap-[30px] md:items-center">
         <p class="text-[26px] mb-[22px] text-[#ffffff] leading-[36px] md:mb-0 lg:text-[36px]">Discover the Spring Collection. Evoke the captivating beauty of the French Riviera</p>
-        <a href="/" class="btn btn-white shrink-0" role="button" aria-label="Shop the Spring Collection">Shop Now</a>
+        <a href="#" class="btn btn-white shrink-0" role="button" aria-label="Shop the Spring Collection">Shop Now</a>
       </div>
     </section>
 
     <!-- featured collections -->
     <section class="flex flex-col space-y-[16px] md:flex-row md:space-y-0 md:gap-[2px] mb-[40px] lg:mb-[80px] xl:mb-[120px] 2xl:mb-[176px]">
-      <a href="/">
+      <a href="#">
         <img src="./images/feat-col1.jpg" alt="Tailored suit" class="w-full object-cover" loading="lazy">
         <div class="px-[20px] py-[17px] lg:px-[30px] lg:py-[27px]">
           <h3 class="mb-[11px] tracking-[0.28px] font-accent">New in</h3>
           <p class="text-[22px] leading-[30px] lg:text-[28px]">An intimate dialogue between tailoring and luxury</p>
         </div>
       </a>
-      <a href="/">
+      <a href="#">
         <img src="./images/feat-col2.jpg" alt="Leather jacket" class="w-full object-cover" loading="lazy">
         <div class="px-[20px] py-[17px] lg:px-[30px] lg:py-[27px]">
           <h3 class="mb-[11px] tracking-[0.28px] font-accent">Autumn Winter ‘24</h3>
@@ -143,7 +143,7 @@
           <h2 class="text-[22px] mb-[9px] lg:text-[36px]">Leather Essentials</h2>
           <div class="md:max-w-[70%] lg:max-w-[672px] md:pt-[11px]">
             <p class="text-[16px] leading-[23px] mb-[25px] lg:text-[22px] lg:leading-[30px]">Sleek silhouettes meticulously constructed with soft, buttery leather to contour the body and empower everyday dressing. Each versatile piece exudes an effortless polish that only the finest leather can translate.</p>
-            <a href="/" class="btn btn-black">Shop Now</a>
+            <a href="#" class="btn btn-black">Shop Now</a>
           </div>
         </div>        
     </section>
@@ -152,17 +152,17 @@
     <section role="region" aria-label="Featured collections slider" class="swiper mySwiper relative w-full overflow-hidden mb-[50px] lg:mb-[100px] 2xl:mb-[208px]">
       <div class="swiper-wrapper">
         <!-- Slide 1 -->
-        <a href="/" class="swiper-slide max-h-fit relative custom-slide">
+        <a href="#" class="swiper-slide max-h-fit relative custom-slide">
           <img src="./images/product1.jpg" alt="New arrival jacket" class="w-full object-cover " loading="lazy"/>
           <h3 class="absolute left-[20px] top-1/2 -translate-y-1/2 transform text-white font-accent">New Arrivals</h3>
         </a>
         <!-- Slide 2 -->
-        <a href="/" class="swiper-slide max-h-fit relative custom-slide">
+        <a href="#" class="swiper-slide max-h-fit relative custom-slide">
           <img src="./images/product2.jpg" alt="Coat" class="w-full object-cover" loading="lazy"/>
           <h3 class="absolute left-[20px] top-1/2 -translate-y-1/2 transform text-white font-accent">Autumn Winter ‘24</h3>
         </a>
         <!-- Slide 3 -->
-        <a href="/" class="swiper-slide max-h-fit relative custom-slide">
+        <a href="#" class="swiper-slide max-h-fit relative custom-slide">
           <img src="./images/product3.jpg" alt="Shoose" class="w-full object-cover" loading="lazy"/>
           <h3 class="absolute left-[20px] top-1/2 -translate-y-1/2 transform text-white font-accent">New Arrivals</h3>
         </a>
@@ -176,12 +176,12 @@
         <div class="grid grid-cols-2 lg:grid-cols-4 gap-x-[2px] gap-y-[7px]">
           <!-- Item 1 -->
           <div>
-            <a href="/">
+            <a href="#">
               <img src="./images/bs1.jpg" alt="Frank Jacket in Cotton" class="max-w-full h-auto" loading="lazy">
             </a>
             <div class="px-[20px] pt-[17px] pb-[20px] font-accent">
               <div class="lg:flex lg:items-start lg:justify-between">
-                <a href="/" class="mb-[11px] block">
+                <a href="#" class="mb-[11px] block">
                   <h3 class="mb-[4px]">Frank Jacket in Cotton</h3>
                   <p>$655.00</p>
                 </a>
@@ -203,12 +203,12 @@
           </div>
           <!-- Item 2 -->
           <div>
-            <a href="/">
+            <a href="#">
               <img src="./images/bs2.jpg" alt="Penna Shirt in Corduroy" class="max-w-full h-auto" loading="lazy">
             </a>
             <div class="px-[20px] pt-[17px] pb-[20px] font-accent">
               <div class="lg:flex lg:items-start lg:justify-between">
-                <a href="/" class="mb-[11px] block">
+                <a href="#" class="mb-[11px] block">
                   <h3 class="mb-[4px]">Penna Shirt in Corduroy</h3>
                   <p>$655.00</p>
                 </a>
@@ -230,12 +230,12 @@
           </div>
           <!-- Item 3 -->
           <div>
-            <a href="/">
+            <a href="#">
               <img src="./images/bs3.jpg" alt="Blaine Top in Cotton" class="max-w-full h-auto" loading="lazy">
             </a>
             <div class="px-[20px] pt-[17px] pb-[20px] font-accent">
               <div class="lg:flex lg:items-start lg:justify-between">
-                <a href="/" class="mb-[11px] block">
+                <a href="#" class="mb-[11px] block">
                   <h3 class="mb-[4px]">Blaine Top in Cotton</h3>
                   <p>$655.00</p>
                 </a>
@@ -257,12 +257,12 @@
           </div>
           <!-- Item 4 -->
           <div>
-            <a href="/">
+            <a href="#">
               <img src="./images/bs4.jpg" alt="Burty Jean in Denim" class="max-w-full h-auto" loading="lazy">
             </a>
             <div class="px-[20px] pt-[17px] pb-[20px] font-accent">
               <div class="lg:flex lg:items-start lg:justify-between">
-                <a href="/" class="mb-[11px] block">
+                <a href="#" class="mb-[11px] block">
                   <h3 class="mb-[4px]">Burty Jean in Denim</h3>
                   <p>$655.00</p>
                 </a>
@@ -292,7 +292,7 @@
     <nav aria-label="Footer navigation" class="grid sm:grid-cols-3 lg:grid-cols-[2fr_1fr_1fr_1fr] xl:grid-cols-[2fr_1fr_1fr_1fr_2fr] gap-[30px] lg:gap-[20px] mb-[60px]">
       <!-- Logo -->
       <div class="mb-[28px] flex">
-        <a href="/" aria-label="Go to the ELY SHIVA homepage">
+        <a href="#" aria-label="Go to the ELY SHIVA homepage">
           <img
             src="./images/logo-bottom.svg"
             alt="ELY SHIVA logo"
@@ -308,27 +308,27 @@
       <div>
         <h3 class="text-[12px] mb-[24px]">Brand</h3>
         <ul class="space-y-3.5">
-          <li><a href="/" class="hover:underline">About</a></li>
-          <li><a href="/" class="hover:underline">Contact</a></li>
-          <li><a href="/" class="hover:underline">Store Locator</a></li>
-          <li><a href="/" class="hover:underline">Stockists</a></li>
+          <li><a href="#" class="hover:underline">About</a></li>
+          <li><a href="#" class="hover:underline">Contact</a></li>
+          <li><a href="#" class="hover:underline">Store Locator</a></li>
+          <li><a href="#" class="hover:underline">Stockists</a></li>
         </ul>
       </div>
       <div>
         <h3 class="text-[12px] mb-[24px]">Customer Care</h3>
         <ul class="space-y-3.5">
-          <li><a href="/" class="hover:underline">Returns & Exchanges</a></li>
-          <li><a href="/" class="hover:underline">Terms & Conditions</a></li>
-          <li><a href="/" class="hover:underline">Privacy Policy</a></li>
-          <li><a href="/" class="hover:underline">Cookie Policy</a></li>
+          <li><a href="#" class="hover:underline">Returns & Exchanges</a></li>
+          <li><a href="#" class="hover:underline">Terms & Conditions</a></li>
+          <li><a href="#" class="hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="hover:underline">Cookie Policy</a></li>
         </ul>
       </div>
       <div>
         <h3 class="text-[12px] mb-[24px]">Social</h3>
         <ul class="space-y-3.5">
-          <li><a href="/" class="hover:underline">Instagram</a></li>
-          <li><a href="/" class="hover:underline">Tiktok</a></li>
-          <li><a href="/" class="hover:underline">Pinterest</a></li>
+          <li><a href="#" class="hover:underline">Instagram</a></li>
+          <li><a href="#" class="hover:underline">Tiktok</a></li>
+          <li><a href="#" class="hover:underline">Pinterest</a></li>
         </ul>
       </div>
   
